# RaytraceSamples

./: .gitmodules  CMakeLists.txt
OptiX_Samples/: CMakeLists.txt
OptiX_Samples/AmbientOcclusion/: CMakeLists.txt  ambient_occlusion.cu  compile.bat  main.cpp
OptiX_Samples/Common/: sampler.h  scene.cpp  scene.h  utils.cpp  utils.h
OptiX_Samples/GlossyReflection/: CMakeLists.txt  compile.bat  glossy_reflection.cpp  glossy_reflection.cu  microfacetggx.h
OptiX_Samples/IdealReflection/: CMakeLists.txt  compile.bat  main.cpp
OptiX_Samples/cuda/: compile.bat  triangle_mesh.cu  triangle_mesh.ptx
RadeonRays_Samples/: CMakeLists.txt
RadeonRays_Samples/AmbientOcclusion/: CMakeLists.txt  ambient_occlusion.cl  main.cpp  payload.cl
RadeonRays_Samples/Common/: sampler.cl  utils.cl  utils.cpp  utils.h
RadeonRays_Samples/GlossyReflection/: CMakeLists.txt  glossy_reflection.cl  glossy_reflection.cpp  microfacetggx.cl
RadeonRays_Samples/IdealReflection/: CMakeLists.txt  bxdf_ideal_reflect.cl  ideal_reflection.cl  ideal_reflection.cpp  payload.cl
RadeonRays_Samples/ShadowsAreaLight/: CMakeLists.txt  payload.cl  shadows_area_light.cl  shadows_area_light.cpp
RadeonRays_Samples/ShadowsPointLight/: CMakeLists.txt  shadows_point_light.cl  shadows_point_light.cpp
Resources/Sponza/: sponza.mtl
cmake/: FindOptiX.cmake
